fix: <div> tag wasn't closed
Signed-off-by: rafidalhaque <rafidalhaque@proton.me>

--- a/web/templates/view_application.html
+++ b/web/templates/view_application.html
@@ -118,6 +118,7 @@
                         <i class="fab fa-telegram-plane me-2"></i>Send Telegram Message
                     </button>
                 </div>
+            </div>
         </div>
     </div>
 </div>
