--- a/web/templates/users.html
+++ b/web/templates/users.html
@@ -16,6 +16,24 @@
     <h5>All Registered Users</h5>
 </div>
 
+    <div class="card mb-4">
+        <div class="card-header">
+            <h6 class="mb-0"><i class="fas fa-filter me-2"></i>Filter Users</h6>
+        </div>
+        <div class="card-body">
+            <form class="row g-3 align-items-center" method="GET">
+                <div class="col-md-10">
+                    <label class="form-label visually-hidden" for="userSearch">Search</label>
+                    <input class="form-control" id="userSearch" name="search" placeholder="Search by name, email, or Telegram username"
+                           type="text" value="{{ search_query }}">
+                </div>
+                <div class="col-md-2">
+                    <button class="btn btn-outline-primary w-100" type="submit">Apply Filters</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
 <div class="card">
     <div class="card-body">
         {% if users %}
