fix: tag name expected
Signed-off-by: rafidalhaque <rafidalhaque@proton.me>

--- a/web/templates/jobs.html
+++ b/web/templates/jobs.html
@@ -27,12 +27,9 @@
                   <div class="col-md-4">
                       <label class="form-label visually-hidden" for="statusFilter">Status</label>
                       <select class="form-select" id="statusFilter" name="status">
-                          <option if status_filter== value="all" {%
-                          'all' %}selected{% endif %}>All Status</option>
-                          <option if status_filter== value="active" {%
-                          'active' %}selected{% endif %}>Active</option>
-                          <option if status_filter== value="inactive" {%
-                          'inactive' %}selected{% endif %}>Inactive</option>
+                        <option value="all" {% if status_filter == 'all' %}selected{% endif %}>All Status</option>
+                        <option value="active" {% if status_filter == 'active' %}selected{% endif %}>Active</option>
+                        <option value="inactive" {% if status_filter == 'inactive' %}selected{% endif %}>Inactive</option>
                       </select>
                   </div>
                   <div class="col-md-6">
